[dev] Tooltiper update correction z-index et filter: drop-shadow

--- a/public/assets/scss/base.scss
+++ b/public/assets/scss/base.scss
@@ -169,8 +169,7 @@ body {
   background-color: white;
   margin: 8px;
   padding: 10px;
-  z-index: 5;
   border-radius: 10px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.041));
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.041);
 }
 
