--- a/public/tooltiper/tooltiper.css
+++ b/public/tooltiper/tooltiper.css
@@ -1,6 +1,5 @@
 .tooltip-container {
     position: relative;
-    display: inline-block;
 }
 
 .tooltip {
